# spark-labs

./: .gitignore  README.md  casaos.yml  docker-compose.yml  justfile  pyproject.toml
lab1/: main.ipynb  task1.ipynb  task2.ipynb
lab1/report/: report.typ
src/lab1/: task1.ipynb  task2.ipynb
src/lab1/report/: report.typ
src/lab2/: task1.ipynb  tasks.ipynb  testing.ipynb
src/lab2/report/: report.typ
src/lab3/: lab3.py
src/lab4/: task 8.md
src/lab4/screenshots/: high_spenders.csv
src/server-docker-files/: compose.yaml
