[project]
name = "spark-labs"
version = "1.0.0"
description = "A collection of hands-on labs for learning Apache Spark and big data analytics on cloud computing infrastructures."
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
  "jupyter>=1.1.1",
  "pyspark-client==4.0.1",
]
